--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,5 @@ dependencies {
     implementation 'com.intellij:annotations:+@jar'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation("com.android.volley:volley:1.1.1")
-
+    implementation ("com.github.bumptech.glide:glide:4.11.0")
 }
